--- a/CSS/Day 1/day1.html
+++ b/CSS/Day 1/day1.html
@@ -12,6 +12,8 @@
         <div id="hero">
             <h1>Hello</h1>
             <h1>World</h1>
+
+            <h1>Changed....</h1>
         
             <p>Lorem ipsum dolor sit amet <span>consectetur</span> adipisicing elit. <br> Tempore, dolore!</p>
         </div>
@@ -22,10 +24,3 @@
 </body>
 </html>
 
-
-git init
-git add .
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/raullama1/test.git
-git push -u origin main
